--- a/de.htwg.phase10/build.gradle
+++ b/de.htwg.phase10/build.gradle
@@ -29,7 +29,7 @@ sourceSets {
   
 sonarqube {
     properties {
-    property "sonar.projectName", "de.htwg.se.phase10"
+    property "sonar.projectName", "SE2016SS-04-Phase10"
     property "sonar.projectKey", "de.htwg.se.phase10"
     property "sonar.projectVersion", "1.0"
     property "sonar.binaries", "bin"
