--- a/de.htwg.phase10/.classpath
+++ b/de.htwg.phase10/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j2"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="E:/temp/guice-master/guice-master/lib/aopalliance.jar"/>
+	<classpathentry kind="lib" path="E:/temp/guice-master/guice-master/lib/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="E:/temp/guice-master/guice-master/lib/javax.inject.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
